--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
         with:
           # Параметр context: ./backend/ указывает, что нужный Dockerfile 
           # находится в ./backend/
-          scontext: ./backend/
+          context: ./backend/
           # Параметр push: true указывает, что образ нужно не только собрать,
           # но и отправить на Docker Hub
           push: true
